# xlartas

./: .dockerignore  .env.prod TEMPLATE  .env.production TEMPLATE  .gitignore  AGENTS.md  Dockerfile  DockerfileBeat  DockerfileCelery  DockerfileDjangoAndBeat  DockerfileFlower  DockerfileMinio  DockerfileNext  DockerfileRabbitMQ  DockerfileReact  DockerfileWeb  LICENSE  README.md  build_images.sh  build_up.sh  data.json  data2.json  docker-compose.prod.yml  docker-compose.yml  entrypoint-minio.sh  entrypoint.sh  entrypoint_beat.sh  entrypoint_celery.sh  entrypoint_flower.sh  entrypoint_minio.sh  hands_deploy.sh  init-minio.sh  nginx.conf  package-lock.json  params_and_funcs.py  pre_init.sh  pyproject.toml  redis.conf  req.txt  requirements.txt  sonar-project.properties  (+3 more)
.github/workflows/: deploy.yml
APP_Harmony/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
APP_Harmony/forms/: forms.py
APP_Harmony/templatetags/: harmony_tags.py
APP_api/: apps.py  serializers.py  urls.py  views.py
APP_filehost/: apps.py  models.py  views.py
APP_filehost/templatetags/: APP_filehost_tags.py
APP_mailing/: apps.py
APP_mailing/services/: services.py
APP_private_msg/: apps.py  models.py  views.py
APP_referral/: admin.py  apps.py  funcs.py  models.py  views.py
APP_resource_pack/: 1.txt  apps.py  models.py  serializers.py  views.py
APP_shop/: admin.py  apps.py  forms.py  funcs.py  middleware.py  models.py  qiwi.py  urls.py  views.py
APP_shop/services/: orders_service.py  products_service.py  qiwi.py
APP_shop/templatetags/: APP_shop_tags.py
APP_tests/: apps.py  models.py  urls.py  views.py
Core/: ErrMsg.py  admin.py  apps.py  error_messages.py  forms.py  funcs.py  middleware.py  models.py  urls.py  views.py
Core/services/: code_confirmation.py  services.py
Core/templatetags/: Core_tags.py
Core/tests/: test_models.py
Core/views/: common_views.py
apps/Core/: admin.py  forms.py  models.py  urls.py
apps/filehost/: ErrMsg.py  admin.py  urls.py  views.py
apps/flex_static/: apps.py
apps/freekassa/: urls.py
apps/harmony/: urls.py  views.py
apps/private_msg/: admin.py  models.py  views.py
apps/programs_api/: apps.py  serializers.py  views.py
apps/referral/: admin.py  funcs.py  urls.py  views.py
apps/resource_pack/: admin.py  models.py  views.py
apps/shop/: forms.py  (+3 more)
backend/: Dockerfile  DockerfileBeat  DockerfileCelery  DockerfileFlower  DockerfileWeb  django_and_beat.sh  entrypoint-minio.sh  entrypoint.prod.sh  entrypoint.sh  entrypoint_beat.sh  entrypoint_celery.sh  entrypoint_flower.sh  entrypoint_minio.sh  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  supervisord.conf  worker.sh  xLLIB_v1.py
common_services/: system_storage.py
config/: celery_conf.py  routing.py  settings.py  urls.py  wsgi.py
docs/: celery.md  sonar.md
freekassa/: apps.py  urls.py  utils.py  views.py
frontend/: .env.production TEMPLATE  DockerfileNext  build-and-copy.sh  craco.config.js  entrypoint_react.sh  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend_next/: package-lock.json  package.json
(+1636 files in other folders)
