[tool.poetry]
name = "xl"
version = "2.0.0"
description = ""
authors = ["Artasov <ivanhvalevskey@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Tier 1
Django = "5.2.4"
adjango = "0.5.6"
djangorestframework = "3.16.0"
adrf = "0.1.9"
celery = "5.5.3"
daphne = "4.2.1"
channels = "4.2.2"

# Tier 2
django-redis = "6.0.0"
django-cors-headers = "4.7.0"
django-logui = "0.1.2"
django-endpoints = "0.0.3"
django-extensions = "4.1"
django-polymorphic = "4.1.0"
djangorestframework-simplejwt = "5.5.0"
django-minio-backend = "3.8.0"
django-celery-beat = "2.8.1"
django-cachalot = "2.8.0"
django-silk = "5.4.0"
django-imagekit = "5.0.0"
django-csp = "4.0"
django-user-agents = "0.4.0"
django-object-actions = "5.0.0"
django-phonenumber-field = { extras = ["phonenumbers"], version = "^8.0.0" }
phonenumbers = "9.0.8"
django-jazzmin = "3.0.1"
django-import-export = { version = "4.3.8", extras = ["all"] }

pytest-asyncio = "0.26.0"
pytest-django = "4.11.1"
flower = "2.0.1"
drf-yasg = "1.21.10"
redis = "6.2.0"
channels-redis = "4.2.1"
twisted = { version = "25.5.0", extras = ["http2", "tls"] }
httpx = "0.28.1"
uuid6 = "2025.0.0"
mcrcon = "0.7.0"
polib = "1.2.0"

aiohttp = "3.11.18"
chardet = "5.2.0"
python-dotenv = "1.1.1"
celery-singleton = "0.3.1"
django-tinymce = "4.1.0"

Pillow = "11.0.0"
psycopg2-binary = "2.9.10"
requests = "2.32.4"
xlwt = "1.3.0"
setuptools = "80.4.0"
pyperclip = "1.9.0"
psutil = "7.0.0"
aiosmtpd = "1.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
